K8s/platform_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: bolafahmi/platform_service:latest
---

apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: plafromsgrpc
    protocol: TCP
    port: 666
    targetPort: 666
