K8s/platform_np_srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-np-service
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
